AIKITDLL/Common.h

	// 初始化SDK并配置回调函数
	AIKITDLL_API int InitializeSDK(const char* appID, const char* apiKey, const char* apiSecret, const char* workDir);
	// 清理SDK资源
	AIKITDLL_API void CleanupSDK();
	// 获取命令词识别结果 (之前称为PGS结果)
	AIKITDLL_API const char* GetPgsResult();
	// VoiceCoordinator 统一语音交互接口
	AIKITDLL_API int StartUnifiedVoiceInteraction(int wakeupThreshold, int esrTimeout);
	AIKITDLL_API int StopUnifiedVoiceInteraction();
	AIKITDLL_API int GetUnifiedVoiceState();
	AIKITDLL_API int IsUnifiedVoiceInteractionRunning();