AIKITDLL/IvwWrapper.h

	// 语音唤醒控制函数
	AIKITDLL_API int StartWakeupDetection(int threshold);
	AIKITDLL_API int StopWakeupDetection();
	// 获取当前唤醒状态 (0-未唤醒, 1-已唤醒)
	AIKITDLL_API int GetWakeupStatus();
	// 重置唤醒状态为未唤醒
	AIKITDLL_API void ResetWakeupStatus();